// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cylinder cylinder 1`] = `
"v 0 0 0
v 0 0 1
v -0.5877852522924731 0 0.8090169943749475
v -0.5877852522924731 0 0.8090169943749475
v 0 0 1
v 0 1 1
v -0.5877852522924731 1 0.8090169943749475
v 0 1 0
v -0.5877852522924731 1 0.8090169943749475
v 0 1 1
v 0 0 0
v -0.5877852522924731 0 0.8090169943749475
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951535 0 0.30901699437494745
v -0.5877852522924731 0 0.8090169943749475
v -0.5877852522924731 1 0.8090169943749475
v -0.9510565162951535 1 0.30901699437494745
v 0 1 0
v -0.9510565162951535 1 0.30901699437494745
v -0.5877852522924731 1 0.8090169943749475
v 0 0 0
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951535 1 0.30901699437494745
v -0.9510565162951536 1 -0.30901699437494734
v 0 1 0
v -0.9510565162951536 1 -0.30901699437494734
v -0.9510565162951535 1 0.30901699437494745
v 0 0 0
v -0.9510565162951536 0 -0.30901699437494734
v -0.5877852522924732 0 -0.8090169943749473
v -0.5877852522924732 0 -0.8090169943749473
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951536 1 -0.30901699437494734
v -0.5877852522924732 1 -0.8090169943749473
v 0 1 0
v -0.5877852522924732 1 -0.8090169943749473
v -0.9510565162951536 1 -0.30901699437494734
v 0 0 0
v -0.5877852522924732 0 -0.8090169943749473
v -1.2246467991473532e-16 0 -1
v -1.2246467991473532e-16 0 -1
v -0.5877852522924732 0 -0.8090169943749473
v -0.5877852522924732 1 -0.8090169943749473
v -1.2246467991473532e-16 1 -1
v 0 1 0
v -1.2246467991473532e-16 1 -1
v -0.5877852522924732 1 -0.8090169943749473
v 0 0 0
v -1.2246467991473532e-16 0 -1
v 0.587785252292473 0 -0.8090169943749475
v 0.587785252292473 0 -0.8090169943749475
v -1.2246467991473532e-16 0 -1
v -1.2246467991473532e-16 1 -1
v 0.587785252292473 1 -0.8090169943749475
v 0 1 0
v 0.587785252292473 1 -0.8090169943749475
v -1.2246467991473532e-16 1 -1
v 0 0 0
v 0.587785252292473 0 -0.8090169943749475
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951535 0 -0.30901699437494756
v 0.587785252292473 0 -0.8090169943749475
v 0.587785252292473 1 -0.8090169943749475
v 0.9510565162951535 1 -0.30901699437494756
v 0 1 0
v 0.9510565162951535 1 -0.30901699437494756
v 0.587785252292473 1 -0.8090169943749475
v 0 0 0
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951535 1 -0.30901699437494756
v 0.9510565162951536 1 0.30901699437494723
v 0 1 0
v 0.9510565162951536 1 0.30901699437494723
v 0.9510565162951535 1 -0.30901699437494756
v 0 0 0
v 0.9510565162951536 0 0.30901699437494723
v 0.5877852522924734 0 0.8090169943749473
v 0.5877852522924734 0 0.8090169943749473
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951536 1 0.30901699437494723
v 0.5877852522924734 1 0.8090169943749473
v 0 1 0
v 0.5877852522924734 1 0.8090169943749473
v 0.9510565162951536 1 0.30901699437494723
v 0 0 0
v 0.5877852522924734 0 0.8090169943749473
v 2.4492935982947064e-16 0 1
v 2.4492935982947064e-16 0 1
v 0.5877852522924734 0 0.8090169943749473
v 0.5877852522924734 1 0.8090169943749473
v 2.4492935982947064e-16 1 1
v 0 1 0
v 2.4492935982947064e-16 1 1
v 0.5877852522924734 1 0.8090169943749473
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.5877852522924731 0 0.8090169943749475
vn 0 0 1
vn 0 0 1
vn -0.5877852522924731 0 0.8090169943749475
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.9510565162951535 0 0.30901699437494745
vn -0.5877852522924731 0 0.8090169943749475
vn -0.5877852522924731 0 0.8090169943749475
vn -0.9510565162951535 0 0.30901699437494745
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.9510565162951535 0 0.30901699437494745
vn -0.9510565162951535 0 0.30901699437494745
vn -0.9510565162951536 0 -0.30901699437494734
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.5877852522924732 0 -0.8090169943749473
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.5877852522924732 0 -0.8090169943749473
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -1.2246467991473532e-16 0 -1
vn -0.5877852522924732 0 -0.8090169943749473
vn -0.5877852522924732 0 -0.8090169943749473
vn -1.2246467991473532e-16 0 -1
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.587785252292473 0 -0.8090169943749475
vn -1.2246467991473532e-16 0 -1
vn -1.2246467991473532e-16 0 -1
vn 0.587785252292473 0 -0.8090169943749475
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.587785252292473 0 -0.8090169943749475
vn 0.587785252292473 0 -0.8090169943749475
vn 0.9510565162951535 0 -0.30901699437494756
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.9510565162951536 0 0.30901699437494723
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.9510565162951536 0 0.30901699437494723
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.5877852522924734 0 0.8090169943749473
vn 0.9510565162951536 0 0.30901699437494723
vn 0.9510565162951536 0 0.30901699437494723
vn 0.5877852522924734 0 0.8090169943749473
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 2.4492935982947064e-16 0 1
vn 0.5877852522924734 0 0.8090169943749473
vn 0.5877852522924734 0 0.8090169943749473
vn 2.4492935982947064e-16 0 1
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 7//7 6//6 4//4
f 10//10 9//9 8//8
f 13//13 12//12 11//11
f 16//16 15//15 14//14
f 17//17 16//16 14//14
f 20//20 19//19 18//18
f 23//23 22//22 21//21
f 26//26 25//25 24//24
f 27//27 26//26 24//24
f 30//30 29//29 28//28
f 33//33 32//32 31//31
f 36//36 35//35 34//34
f 37//37 36//36 34//34
f 40//40 39//39 38//38
f 43//43 42//42 41//41
f 46//46 45//45 44//44
f 47//47 46//46 44//44
f 50//50 49//49 48//48
f 53//53 52//52 51//51
f 56//56 55//55 54//54
f 57//57 56//56 54//54
f 60//60 59//59 58//58
f 63//63 62//62 61//61
f 66//66 65//65 64//64
f 67//67 66//66 64//64
f 70//70 69//69 68//68
f 73//73 72//72 71//71
f 76//76 75//75 74//74
f 77//77 76//76 74//74
f 80//80 79//79 78//78
f 83//83 82//82 81//81
f 86//86 85//85 84//84
f 87//87 86//86 84//84
f 90//90 89//89 88//88
f 93//93 92//92 91//91
f 96//96 95//95 94//94
f 97//97 96//96 94//94
f 100//100 99//99 98//98
"
`;

exports[`cylinder cylinder diag 1`] = `
"v 0 0 0
v 0 -0.7071067811865476 0.7071067811865476
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v 0 -0.7071067811865476 0.7071067811865476
v 1 0.2928932188134524 1.7071067811865475
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 1 1 1
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 1 0.2928932188134524 1.7071067811865475
v 0 0 0
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 1 1 1
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 0 0 0
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 1 1 1
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0 0 0
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.47992464881654534 0.812023727225957 -0.33209907840941155
v -0.47992464881654534 0.812023727225957 -0.33209907840941155
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0.5200753511834546 1.812023727225957 0.6679009215905884
v 1 1 1
v 0.5200753511834546 1.812023727225957 0.6679009215905884
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0 0 0
v -0.47992464881654534 0.812023727225957 -0.33209907840941155
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v -0.47992464881654534 0.812023727225957 -0.33209907840941155
v 0.5200753511834546 1.812023727225957 0.6679009215905884
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 1 1 1
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 0.5200753511834546 1.812023727225957 0.6679009215905884
v 0 0 0
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 1 1 1
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 0 0 0
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1 1 1
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 0 0 0
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1 1 1
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 0 0 0
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1 1 1
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 0 0 0
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
v 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1.0000000000000002 0.2928932188134523 1.7071067811865475
v 1 1 1
v 1.0000000000000002 0.2928932188134523 1.7071067811865475
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn 0 -0.7071067811865476 0.7071067811865476
vn 0 -0.7071067811865476 0.7071067811865476
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.47992464881654534 0.812023727225957 -0.33209907840941155
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.47992464881654534 0.812023727225957 -0.33209907840941155
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn -0.47992464881654534 0.812023727225957 -0.33209907840941155
vn -0.47992464881654534 0.812023727225957 -0.33209907840941155
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
f 3//3 2//2 1//1
f 6//6 5//5 4//4
f 7//7 6//6 4//4
f 10//10 9//9 8//8
f 13//13 12//12 11//11
f 16//16 15//15 14//14
f 17//17 16//16 14//14
f 20//20 19//19 18//18
f 23//23 22//22 21//21
f 26//26 25//25 24//24
f 27//27 26//26 24//24
f 30//30 29//29 28//28
f 33//33 32//32 31//31
f 36//36 35//35 34//34
f 37//37 36//36 34//34
f 40//40 39//39 38//38
f 43//43 42//42 41//41
f 46//46 45//45 44//44
f 47//47 46//46 44//44
f 50//50 49//49 48//48
f 53//53 52//52 51//51
f 56//56 55//55 54//54
f 57//57 56//56 54//54
f 60//60 59//59 58//58
f 63//63 62//62 61//61
f 66//66 65//65 64//64
f 67//67 66//66 64//64
f 70//70 69//69 68//68
f 73//73 72//72 71//71
f 76//76 75//75 74//74
f 77//77 76//76 74//74
f 80//80 79//79 78//78
f 83//83 82//82 81//81
f 86//86 85//85 84//84
f 87//87 86//86 84//84
f 90//90 89//89 88//88
f 93//93 92//92 91//91
f 96//96 95//95 94//94
f 97//97 96//96 94//94
f 100//100 99//99 98//98
"
`;
